Bug 1617795: Use BrowsingContext instead of DOM window to get the focused document for a11y. r=yzen,hsivonen

nsFocusManager::GetFocusedWindow may return a window even if focus is actually inside an embedded OOP iframe.
Instead, use nsFocusManager::GetFocusedBrowsingContext, which always knows about the current focus across all processes.
If the focused context is in this process, we get its document and return it.

Differential Revision: https://phabricator.services.mozilla.com/D64514

--HG--
extra : moz-landing-system : lando